fixed spacing

--- a/src/CSS/About.css
+++ b/src/CSS/About.css
@@ -46,8 +46,6 @@
     padding: 20px;
 }
 
-.rightAbout {}
-
 .profilePhoto {
     max-width: 100%;
     padding: 0.5rem;
